# cover-letter-llm

./: .gitignore  app.py  pyproject.toml
agents/: ollama.py
prompts/: company_info_prompt.py  cover_letter_prompts.py  job_listing_prompt.py  resume_prompt.py
utils/: utils.py
