[project]
name = "cover-letter-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-community",
    "langchain",
    "langchain-openai",
    "html2text",
    "streamlit",
    "pypdf",
    "pyperclip",
    "python-dotenv",
    "playwright",
    "langchain-cli",
    "langchain-ollama>=0.2.2",
]
